# EyeAp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  routes.rs
cli/src/components/: input.rs  mod.rs  nav.rs  nav_item.rs
cli/src/pages/: home.rs  login.rs
cli/templates/: index.aml  router.aml
cli/templates/components/: input.aml  nav.aml  nav_item.aml
cli/templates/pages/: home.aml  login.aml
frontend/: Cargo.toml  Dockerfile  index.html
frontend/src/: api.rs  lib.rs  router.rs  store.rs
frontend/src/components/: auth_login_page.rs  home.rs  login_page.rs  mod.rs  nav.rs  profile_page.rs
fusion_auth/kickstart/: kickstart.json
mailcatcher/: Dockerfile
